2007-06-20  Martin Hunt  <hunt@redhat.com>

	* stap_merge.c (main): Add verbose option. Will realloc
	buffer if current size is too small. Check return codes
	from writes so gcc won't complain.

2007-06-07  Martin Hunt  <hunt@redhat.com>

	* relay_old.c (open_relayfs_files): Add support for
	output file names (-o) with bulk (relayfs) mode.

2007-06-04  Martin Hunt  <hunt@redhat.com>

	* mainloop.c (cleanup_and_exit): Disable signals
	while exiting.
	(fatal_handler): Use return values from write() to
	avoid warnings.

2007-05-24  Martin Hunt  <hunt@redhat.com>

	* mainloop.c (cleanup_and_exit): Fix typo.

2007-05-22  Martin Hunt  <hunt@redhat.com>

	* mainloop.c (init_staprun): Change dbug() call.

	* relay.c: Fix ppoll() call and some race conditions involving 
	signals.

2007-05-10  Martin Hunt  <hunt@redhat.com>

	* relay.c (reader_thread): Set timeout for streaming to 
	200ms.

2007-05-09  Martin Hunt  <hunt@redhat.com>

	* relay.c (reader_thread): For bulk mode, set timeout to NULL
	so ppoll never times out.

2007-05-08  Martin Hunt  <hunt@redhat.com>

	* relay.c (ppoll): Add a compatibility function for
	glibc < 2.4.

2007-05-08  Martin Hunt  <hunt@redhat.com>	
	Signal handler cleanup.
	* mainloop.c (fatal_handler): New. Cleanly handle
	unexpected fatal signals.
	(setup_main_signals): New. Set signals once mainloop
	is entered.
	(setup_signals): New. Block certain signals during initialization.
	Set handler for fatal signals.
	* relay.c (reader_thread): Use ppoll(). Terminate on 
	SIGUSR2 after reading any remaining data.
	(close_relayfs): Remove sleep hack. Send SIGUSR2 to all threads.

	Runtime debug messages.
	* staprun.h: Change dbug() to accept a debuglevel and
	enable it.
	* *.c: Modify dbug() calls.

2007-05-07  Martin Hunt  <hunt@redhat.com>
	Patch from David Smith
	* mainloop.c (stp_main_loop): Properly handle write() 
	return value. Fixes build problem with some compilers.

2007-04-10  Martin Hunt  <hunt@redhat.com>
